--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -18,7 +18,7 @@
       />
     </div>
     <div>
-      <button type="submit" id="login" name="login">Entrar</button>
+      <button type="submit" class="btn" name="login">Entrar</button>
     </div>
     <hr />
     <!-- <button type="submit" id="create" name="create">Create Room</button> -->
