--- a/app/static/styles/style.css
+++ b/app/static/styles/style.css
@@ -157,7 +157,30 @@
     font-weight: 900;
   }
 
-  /*  */
+  /* Dashboard */
+  
+  .dashboard-topic {
+    background-color: #ffffff;
+    border-radius: 10px;
+    padding: 15px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+
+  .dashboard-topic-title {
+      font-size: 1.5em;
+      margin-bottom: 10px;
+      color: #333;
+  }
+
+  .dashboard-user {
+      background-color: #e3e3e3;
+      border-radius: 8px;
+      padding: 10px;
+      margin: 5px 0;
+  }
+
+  /* Room */
   
   #room-container {
     height: 100%;
