--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,5 +1,51 @@
 {% extends 'base.html' %} {% block content %}
 <div id="quiz-container">
     <h1 id="quiz-header">Conversas</h1>
+
+    <div id="topicList"></div>
+
+    <script>
+        const dashboard_data2 = [
+            {
+                title: "Teoria Terra Plana",
+                users: ["Ana", "Bob", "Caca"]
+            },
+            {
+                title: "Teoria Lua",
+                users: ["Ana", "Caca"]
+            },
+            {
+                title: "Teoria Iluminatis",
+                users: ["Bob", "Dani", "Eva", "Fabi"]
+            }
+        ];
+        function renderTopics() {
+            const topicList = document.getElementById('topicList');
+
+            dashboard_data2.forEach(topic => {
+                const topicDiv = document.createElement('div');
+                topicDiv.classList.add('dashboard-topic');
+
+                const title = document.createElement('h2');
+                title.classList.add('dashboard-topic-title');
+                title.textContent = topic.title;
+                topicDiv.appendChild(title);
+
+                topic.users.forEach(user => {
+                    const userDiv = document.createElement('div');
+                    userDiv.classList.add('dashboard-user');
+                    userDiv.textContent = user;
+                    topicDiv.appendChild(userDiv);
+                });
+
+                // Adiciona o tópico ao container principal
+                topicList.appendChild(topicDiv);
+            });
+        }
+
+        // Renderiza os tópicos na página
+        renderTopics();
+    </script>
+
 </div>
 {% endblock %}
