--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -2,8 +2,9 @@
 <div id="room-container">
     <h1 id="room-header">Chat</h1>
     <div id="room-subsection">
-        <h2 id="room-code-display">Room Code: <span>{{room}}</span></h2>
-        <a href="/" id="leave-chat-btn">Leave the Chat</a>
+        <h3 id="room-code-display">Usuário: <span>{{other_user}}</span></h2>
+        <h3 id="room-code-display">Assunto: <span>{{topic_title}}</span></h2>
+        <a href="/dashboard" id="leave-chat-btn">Voltar</a>
     </div>
   
     <div id="chat-room-widget">
@@ -63,10 +64,10 @@
         }
     </script>
   
-    <!-- {% for message in messages %}
+    {% for message in messages %}
     <script type="text/javascript">
         createChatItem("{{message.message}}", "{{message.sender}}");
     </script>
-    {% endfor %} -->
+    {% endfor %}
 </div>
 {% endblock %}
