--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,26 +1,60 @@
 {% extends 'base.html' %} {% block content %}
 <div id="home-container">
-    <h1 id="home-header">Projeto Conversas Saudáveis</h1>
+    <h1 id="home-header">Disputare Veritas: Um aplicativo para debater e aprender sobre teorias conspiratórias</h1>
 
-    <div>
-        <h2>Apresentação</h2>
+    <div class="home-div">
+        <h2>INTRODUÇÃO</h2>
         <p>
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+            A definição de teorias da conspiração, de acordo com Keeley (1999, p.4)
+            é uma explicação proposta para algum evento histórico (ou eventos) em
+            termos de agência de casualidade significativa de um grupo relativamente 
+            pequeno de pessoas - ou conspiradores - agindo em segredo. 
+        </p>
+        <p>
+            A crença dos indivíduos nas teorias conspiratórias está se mostrando um
+            problema para a sociedade. Esse trabalho visa identificar a causa desse
+            problema, bem como minimizá-lo.
         </p>
     </div>
-    <div>
-        <h2>Dados Coletados</h2>
+    <div class="home-div">
+        <h2>OBJETIVO</h2>
+        <p>
+            Sendo assim, essa pesquisa tem o objetivo de minimizar, ou até mesmo resolver,
+            o problema das teorias conspiratórias utilizando um aplicativo que visa diminuir
+            a desinformação sobre o assunto teorias conspiratórias através da conexão entre indivíduos.
+        </p>
+    </div>
+    <div class="home-div">
+        <h2>METODOLOGIA</h2>
+        <p>
+            O projeto visa formar e testar um aplicativo que permite uma conversa civilizada
+            entre pessoas com opiniões divergentes. Para isso, os usuários devem responder
+            um formulário anônimo com suas visões, para que o algoritmo, assim, direcione-a
+            à outro usuário com opinião divergente.
+        </p>
+    </div>
+    <div class="home-div">
+        <h2>DADOS COLETADOS</h2>
         <p>
             Os dados das conversas serão armazenados para posterior análise pelos pesquisadores.
         </p>
         <p>
-            Não forneça nenhum dado pessoal sensível.
+            Por razões de segurança, evite divulgar informações pessoais suas ou de terceiros,
+            como seu nome real, e-mail, senhas, número de telefone, endereço, dados bancários, etc.
         </p>
         <p>
-            Etc...
+            Para garantir um ambiente saudável, respeitoso e produtivo, pedimos que todos os
+            usuários sigam as regras de boa educação e conduta. Confira abaixo algumas orientações importantes:
+        </p>
+        <p>
+            <ul>
+                <li>Evite Linguagem Inapropriada.</li>
+                <li>Seja Respeitoso.</li>
+                <li>Nada de Spam.</li>
+            </ul>
         </p>
     </div>
-    <div>
+    <div class="home-div">
         <a href="/login"><button class="btn">Participar</button></a>
     </div>
 </div>
