--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 <div id="login-container">
-  <h1 id="login-header">Projeto Conversas Saudáveis</h1>
+  <h1 id="login-header">Disputare Veritas</h1>
 
   {% if error %}
   <p id="error">{{error}}</p>
