--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div id="quiz-container">
-    <h1 id="quiz-header">Questionário</h1>
+    <h1 id="quiz-header">Disputare Veritas</h1>
+    <h2 id="quiz-header">Questionário</h1>
 
     <form method="post" id="chat-widget-quiz">
         {% for topic in topics %}
