--- a/app/templates/room.html
+++ b/app/templates/room.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block content %}
 <div id="room-container">
-    <h1 id="room-header">Chat</h1>
+    <h1 id="room-header">Disputare Veritas</h1>
     <div id="room-subsection">
         <h3 id="room-code-display">Usuário: <span>{{other_user}}</span></h2>
         <h3 id="room-code-display">Assunto: <span>{{topic_title}}</span></h2>
