--- a/app/templates/dashboard.html
+++ b/app/templates/dashboard.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} {% block content %}
 <div id="quiz-container">
-    <h1 id="quiz-header">Conversas</h1>
+    <h1 id="quiz-header">Disputare Veritas</h1>
+    <h2 id="quiz-header">Conversas</h1>
 
     <div id="topicList"></div>
 
